--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,118 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --color: 220, 220, 200;
+  --background-color: rgb(0, 0, 0);
+  scroll-behavior: smooth;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.scroll-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  will-change: transform;
 }
+
+/* @media (prefers-color-scheme: dark) {
+} */
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: rgb(var(--color));
+  /* background-color: var(--background-color); */
+}
+
+.base-bg {
+  background: linear-gradient(to bottom, transparent, rgb(0, 0, 0)),
+    url("/bg-grid.png");
+}
+
+.inverted-cursor {
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  border-radius: 50%;
+  pointer-events: none;
+  mix-blend-mode: difference;
+  z-index: 99;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+* {
+  position: relative;
+}
+
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  background: rgb(15, 15, 15);
+}
+*::-webkit-scrollbar-thumb {
+  background: rgb(40, 40, 40);
+  border-radius: 6px;
+}
+
+@keyframes smooth-blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.smooth-blink {
+  animation: smooth-blink 2s infinite ease-in-out;
+}
+
+@keyframes select-cursor-animation {
+  0% {
+    width: 32%;
+  }
+  10% {
+    width: 30%;
+  }
+  20% {
+    width: 28%;
+  }
+  70% {
+    width: 28%;
+  }
+  80% {
+    width: 30%;
+  }
+  100% {
+    width: 32%;
+  }
+}
+
+.select-cursor-animation {
+  animation: select-cursor-animation 4s infinite ease-in-out;
+}
+
+.animate-blinking {
+  animation: blink-animation 1s steps(5, start) infinite;
+  -webkit-animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
   }
 }
