--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@ body {
 
 .base-bg {
   background: linear-gradient(to bottom, transparent, rgb(0, 0, 0)),
-    url("/bg-grid.png");
+    url("/bg-grid.webp");
 }
 
 .inverted-cursor {
